--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -716,4 +716,6 @@ input[type="button"] {
     padding: 20px;
     margin: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: calc(100% - 30px); /* Full width minus margins */
+    box-sizing: border-box;
 } 
